--- a/lefthook.yml
+++ b/lefthook.yml
@@ -5,8 +5,8 @@ pre-commit:
       # run: rspec
     security:
       run: brakeman --no-pager --ignore-model-output --except CheckRender
-    bundler-audit:
-      run: bundle exec bundler-audit
+    # bundler-audit:
+    #   run: bundle exec bundler-audit
     rubocop_autocorrect:
       tags: rubocop correct
       run: bundle exec rubocop -A
