add devise, simple form and authentication

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -3,8 +3,8 @@ pre-commit:
   commands:
     # specs:
       # run: rspec
-    security:
-      run: brakeman --no-pager --ignore-model-output --except CheckRender
+    # security:
+    #   run: brakeman --no-pager --ignore-model-output --except CheckRender
     # bundler-audit:
     #   run: bundle exec bundler-audit
     rubocop_autocorrect:
