--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,10 @@
 {
   "css.customData": [".vscode/tailwind.json"],
-  "cSpell.words": ["activerecord", "ajouter", "vehicule"]
+  "cSpell.words": [
+    "activerecord",
+    "ajouter",
+    "Hideable",
+    "hotwired",
+    "vehicule"
+  ]
 }
